feat(*): header, footer, desktop & mobile nav, search, index content

--- a/content/404.md
+++ b/content/404.md
@@ -10,12 +10,10 @@ eleventyExcludeFromCollections: true
 
 Sorry, but the page you were trying to view does not exist.
 
-It may have existed before, but this site is now a static archive of the old Trac site. Some pages have been removed.
+It may have existed before, but this site is now a static archive of the old plugins site. Some pages may have been lost.
 
-jQuery issues have moved to [GitHub](https://github.com/jquery/jquery/issues).
+Search is still supported, but only for the purposes of preservation. Plugins are no longer updated. The plugin versions shown as "latest" on this site should not be considered usable in production.
 
-If you know the ticket number you are looking for, use the following URL format to go directly to the ticket:
+If you are looking for a plugin, you can try searching for it on [npm](https://www.npmjs.com/). Many plugins use the "jquery-plugin" keyword.
 
-`https://bugs.jquery.com/ticket/<ticket number>`
-
-Or, search the full archive of tickets using the search box above.
+jQuery issues can be found on [GitHub](https://github.com/jquery/jquery/issues).
