fix(homepage): complete homepage

--- a/content/404.md
+++ b/content/404.md
@@ -12,8 +12,8 @@ Sorry, but the page you were trying to view does not exist.
 
 It may have existed before, but this site is now a static archive of the old plugins site. Some pages may have been lost.
 
-Search is still supported, but only for the purposes of preservation. Plugins are no longer updated. The plugin versions shown as "latest" on this site should not be considered usable in production.
+Search is still supported, but only for the purposes of preservation. Plugins are no longer updated. The plugin versions shown as "latest" on this site should no longer be considered the latest versions.
 
-If you are looking for a plugin, you can try searching for it on [npm](https://www.npmjs.com/). Many plugins use the "jquery-plugin" keyword.
+If you are looking for a plugin, try searching for it on [npm](https://www.npmjs.com/). Many plugins use the "jquery-plugin" keyword.
 
 jQuery issues can be found on [GitHub](https://github.com/jquery/jquery/issues).
