--- a/content/404.md
+++ b/content/404.md
@@ -4,6 +4,8 @@ permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 
+<div class="flex flex-col py-5 px-6">
+
 # Error: Not Found
 
 ---
@@ -17,3 +19,5 @@ Search is still supported, but only for the purposes of preservation. Plugins ar
 If you are looking for a plugin, try searching for it on [npm](https://www.npmjs.com/). Many plugins use the "jquery-plugin" keyword.
 
 jQuery issues can be found on [GitHub](https://github.com/jquery/jquery/issues).
+
+</div>
